syntax = "proto3";

package abi;

// General

message Address {
  string address = 1;
}

message Amount {
  fixed64 amount = 1;
}

message Empty {
}

// CreateSC

message CreateSCRequest {
  bytes bytecode = 1;
}

message CreateSCResponse {
  Address address = 1;
}

// CallSC

message CallRequest {
  Address address = 1;
  string function = 2;
  bytes arg = 3;
  Amount call_coins = 4;
}

message CallResponse {
  bytes return_data = 1;
}

// GenerateEvent
message GenerateEventRequest {
  string event = 1;
}

// TransferCoins
message TransferCoinsRequest {
  Address to_address = 1;
  Amount raw_amount = 2;
}

// log
message LogRequest {
  string message = 1;
}

// test
message TestRequest {
  bytes message_in = 1;
}

message TestResponse {
  bytes message_out = 1;
}
